--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header-container {
+  position: sticky;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 68px;
+  display: flex;
+  background-color: #e5e5e5;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 48px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
+}
+
+.brand-container {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.logo {
+  height: 48px;
+}
+
+.logo-text {
+  font-size: 28px;
+  font-weight: 700;
+  color: #000;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.links-list {
+  list-style: none;
+}
+
+.link-item > a {
+  color: #000;
+  font-size: 20px;
+}
+
+.link-item > a:hover {
+  border-bottom: 4px solid #000;
 }
