--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,39 @@ a {
 .link-item > a:focus {
   border-bottom: 4px solid #000;
 }
+
+.rockets-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+}
+
+.rocket-container {
+  display: flex;
+  flex-direction: row;
+  column-gap: 5%;
+  padding: 5%;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
+  margin-bottom: 5%;
+}
+
+.rocket-image {
+  width: 30%;
+  height: 100%;
+  border-radius: 8px;
+}
+
+.rocket-description {
+  margin: 3% 0 3% 0;
+}
+
+.rocket-button {
+  background-color: #5c73a2;
+  border: none;
+  border-radius: 8px;
+  padding: 1% 3% 1% 3%;
+  color: #fff;
+  cursor: pointer;
+}
