--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,7 @@ tr:nth-child(even) {
 
 .my-rockets-container {
   padding: 3%;
+  width: 100%;
 }
 
 .rocket-reserved-container {
@@ -201,9 +202,10 @@ tr:nth-child(even) {
   flex-direction: column;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
-  max-width: 50%;
   margin-top: 1%;
   background-color: #fff;
+  width: 100%;
+  min-height: 300px;
 }
 
 .rockets-reserved {
@@ -212,4 +214,8 @@ tr:nth-child(even) {
 
 .profile-container {
   background-color: #f2f2f2;
+  height: 93vh;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
